--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
             <div class="row">
               <div class="col">
-                 <a href="../Profile/profile.html"><button>Profile</button></a> 
+                 <a href="./Profile/profile.html"><button>Profile</button></a> 
                   <a href="../portfolio/portfolio.html"><button>Portfolio</button></a>
                   <a href="../experience/experience.html"><button>Eperience</button></a>
                   <a href="../about/about.html"> <button>About</button></a>
