--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Nidhin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="../images/connectmebg.webp">
+    <link rel="icon" href="images/connectmebg.webp">
   
 </head>
 <body >
