--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <div class="row">
               <div class="col">
                  <a href="Profile/profile.html"><button>Profile</button></a> 
-                  <a href="../portfolio/portfolio.html"><button>Portfolio</button></a>
-                  <a href="../experience/experience.html"><button>Eperience</button></a>
-                  <a href="../about/about.html"> <button>About</button></a>
-                  <a href="../skills/skill.html"><button>Skills</button></a>
-                  <a href="../connect me/connectme.html"> <button >Connect Me</button></a> 
+                  <a href="portfolio/portfolio.html"><button>Portfolio</button></a>
+                  <a href="experience/experience.html"><button>Eperience</button></a>
+                  <a href="about/about.html"> <button>About</button></a>
+                  <a href="skills/skill.html"><button>Skills</button></a>
+                  <a href="connect me/connectme.html"> <button >Connect Me</button></a> 
               </div>
               <div class="col">
                 <img height="300px" width="320px
-                " src="../images/profile.png" alt="bootstrap">
+                " src="images/profile.png" alt="bootstrap">
               </div>
             </div>
             </div>
