--- a/about/about.html
+++ b/about/about.html
@@ -22,6 +22,11 @@
                 <h5 style="color:rgb(224, 224, 224);">Phone : 8891103848</h5>
                 <h5 style="color:rgb(224, 224, 224);">City : Kottayam</h5>
                 <h5 style="color:rgb(224, 224, 224);">Email : nidhinbabujessy@gmail.com</h5>
+                  <div class="social">
+                  <a href="https://www.facebook.com/nithin.babu.5076?mibextid=ZbWKwL"><img height="40px" width="40px" src="../images/facebookicon.png" alt="bootstrap"></a>
+                  <a href="https://www.instagram.com/mr_b____13/"><img height="40px" width="40px" src="../images/instagram.png" alt="bootstrap"></a>
+                  <a href="https://twitter.com/Nidhin_Babu1"><img height="40px" width="40px" src="../images/twitter.png" alt="bootstrap"></a>
+                </div>
                 
                
 
