--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile-Nidhin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="profile.css">
+    <link rel="icon" href="images/logo1.png">
+</head>
 </head>
 <body class="container">
             <div class="row">
