--- a/connect me/connectme.html
+++ b/connect me/connectme.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Connect-Nidhin</title>
     <link rel="stylesheet" href="connectme.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <link rel="icon" href="images/logo1.png">
 </head>
 
 <body class="background">
