--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <div class="col">
                  <a href="Profile/profile.html"><button>Profile</button></a> 
                   <a href="portfolio/portfolio.html"><button>Portfolio</button></a>
-                  <a href="experience/experience.html"><button>Eperience</button></a>
+                  <a href="experience/experience.html"><button>Experience</button></a>
                   <a href="about/about.html"> <button>About</button></a>
                   <a href="skills/skill.html"><button>Skills</button></a>
                   <a href="connect me/connectme.html"> <button >Connect Me</button></a> 
