--- a/skills/skill.html
+++ b/skills/skill.html
@@ -26,7 +26,7 @@
                 <h5 style="color:rgb(224, 224, 224);">FLUTTER</h5>
                 <h5 style="color:rgb(224, 224, 224);">VIDEO EDITING</h5>
                 <h5 style="color:rgb(224, 224, 224);">PHOTO EDITING</h5>
-                <h5 style="color:rgb(224, 224, 224);">CENIMATOGRAPHY</h5>
+                <h5 style="color:rgb(224, 224, 224);">CINEMATOGRAPHY</h5>
                 
                
 
