--- a/experience/experience.html
+++ b/experience/experience.html
@@ -8,7 +8,7 @@
     <title>Experience</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="experience.css">
-     <link rel="icon" href="images/logo1.png">
+     <link rel="icon" href="https://github.com/nidhinbabujessy/myPortfolio/blob/master/images/logo1.png">
 </head>
 <body class="container">
             <div class="row">
